[tool.poetry]
name = "flm-phfpack"
version = "0.1.0"
description = "Support for emulating latex my phf* packages in FLM (see flm-core package)"
authors = ["Philippe Faist"]
license = "MIT"
readme = ["README.md"]

[tool.poetry.dependencies]
python = "^3.8"
flm-core = ">=0.3.0a10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
